fixed iframe overflow

--- a/style.css
+++ b/style.css
@@ -229,3 +229,7 @@ h2.welcome-intro {
 .current-page {
   font-style: italic;
 }
+
+iframe {
+  max-width: 100%;
+}
